# robot_cognition_system

./: CMakeLists.txt  classifier_run.sh  laser_run.sh  pub_run.sh  upd.config  upd_run.sh
documentation/: .~lock.Application  Operation - Robotic Cognition System.odt#  .~lock.Presentation.odp#  .~lock.Solution Building Blocks - Robotic Cognition System.odt#  .~lock.Test cases.odt#  .~lock.lab_images_raw.odt#  Presentation.odp  Solution Building Blocks - Robotic Cognition System.odt  Test cases.odt  lab_images_raw.odt  notebook.md
sim_model/: CMakeLists.txt  package.xml
sim_model/config/: base_local_planner_params.yaml  costmap_common_params.yaml  diffdrive.yaml  dwa_local_planner_params.yaml  gazebo_ros_control_params.yaml  global_costmap_params.yaml  laser_pan.yaml  laser_tilt.yaml  local_costmap_params.yaml  move_base_params.yaml
sim_model/launch/: diffdrive.launch  display.launch  gazebo.launch  gazebo_test.launch  robot.launch  robot_lab.launch
sim_model/launch/includes/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml
sim_model/rviz/: urdf.rviz  urdf_lab.rviz
sim_model/scripts/: build.sh  launch.sh  launch_lab.sh
sim_model/urdf/: 03-origins.urdf  sim_caster.urdf.xacro  sim_model.urdf.xacro
sim_model/world/: complete_museum.world  kinect  rcs_model_1.world  rcs_model_2.world  simple_blocks.world
src/: diode_laser_service.py  laser_publisher.py  move_base.py  move_to_target.py  passage_classifier_publisher copy.cpp  passage_classifier_publisher old_version.cpp  passage_classifier_publisher.cpp  upd_publisher copy.cpp  upd_publisher.cpp  (+1 more)
(+39 files in other folders)
