<package>
  <name>sim_model</name>
  <version>0.5.0</version>

  <description>This package contains the model for Robot Cognition System project</description>
  <author email="tarcisiofcarvalho@yahoo.com.br">Tarcisio Franco de Carvalho</author>

  <maintainer email="tarcisiofcarvalho@yahoo.com.br">Tarcisio Franco de Carvalho</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
